@@ -64,6 +64,7 @@ UDP, TCP and TLS protocols.
     parser.add_argument('-nocolor', help='Show result without colors', dest='nocolor', action="count")
     parser.add_argument('-o', '--output_file', type=str, help='Save data into a log file', dest='ofile', default='')
     parser.add_argument('-fp', help='Try to fingerprinting', dest='fp', action="count")
+    parser.add_argument('-random', help='Randomize target hosts', dest='random', action="count")
 
     # Array for all arguments passed to script
     args = parser.parse_args()
@@ -98,8 +99,9 @@ UDP, TCP and TLS protocols.
         NOCOLOR = args.nocolor
         OFILE = args.ofile
         FP = args.fp
+        RANDOM = args.random
 
-        return IPADDR, HOST, PORT, PROTO, METHOD, DOMAIN, CONTACTDOMAIN, FROMNAME, FROMUSER, FROMDOMAIN, TONAME, TOUSER, TODOMAIN, UA, THREADS, VERBOSE, PING, FILE, NOCOLOR, OFILE, FP
+        return IPADDR, HOST, PORT, PROTO, METHOD, DOMAIN, CONTACTDOMAIN, FROMNAME, FROMUSER, FROMDOMAIN, TONAME, TOUSER, TODOMAIN, UA, THREADS, VERBOSE, PING, FILE, NOCOLOR, OFILE, FP, RANDOM
     except ValueError:
         print('[-] Error: Bad IP format')
         sys.exit(1)
